styles/bootstrap/application.css
@media only screen and (min-width: 978px) {
  body { /* Add top padding for full-width layout */
	 padding-top: 60px;
  }
}
@media (max-width: 979px) {
  .navbar-fixed-top {
    margin-bottom: 0;
  }
}
img.mimeicon {
  -moz-border-bottom-colors: none;
  -moz-border-image: none;
  -moz-border-left-colors: none;
  -moz-border-right-colors: none;
  -moz-border-top-colors: none;
  border-color: #CCCCCC #AAAAAA #999999 #CCCCCC;
  border-style: solid;
  border-width: 1px 2px 2px 1px;
}

.table-align-center {
  text-align: center !important;
}

/*.btn, .btn:hover, .btn:focus, .btn:active, .btn.active  {
  background-color: #515151;
  background-image: none;
  color: white;
  text-shadow: none;
}*/

.form-help {
  color: #0072B9;
  cursor: default;
}

.form-title-top {
  vertical-align: top;
}

.form-alert {
  color: red;
  cursor: default;
}

.alert {
  text-shadow: none;
}

#logo-img {
    height: 39px;
    padding-right: 25px;
    width: auto;
}

.searchfield {
  width: 200px;
}

.navbar-inverse .navbar-search .search-query, .navbar-inverse .navbar-search .search-query {
  border: none;
  border-color: gray;
  border-width: 1px;
  border-style: solid;
  color: white;
}

.navbar-inverse .navbar-search .search-query:focus, .navbar-inverse .navbar-search .search-query.focused {
  border-color: gray;
  border-width: 1px;
  border-style: solid;
}

.navbar .brand, .navbar form, .navbar .nav > li > a {
  line-height: 42px;
}

.navbar form {
  margin: 10px 0;
}

textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"] {
  margin-bottom: 0;
}
.input-margin-correction {
  margin-bottom: 0 !important;
}

.input-with-button {
    width: 85%;
}

.row-list {
    width: 60%;
}

.list-action a {
	text-decoration: none;
	color: #333;
	padding: 2px;
	cursor: pointer;
	font-size: 110%;
}

.navbar-inner {
    min-height: 61px;
}

.navbar-inverse .navbar-inner {
  background-image: none;
  background-color: white;
  border:none;
}

.content-heading {
    text-align: center;
    color: white;
    padding: 2px 0;
    background-color: #0072B9;
    color: white;/*#146151*/;
}

.content-subheading {
    /*color: #0072B9;*/
    color: #303030;
}

.search-results {
    background-color: #0072B9;
    color: white;
}

.no-pointer, .no-pointer:active, .no-pointer:hover, .no-pointer:focus {
  cursor: default;
}

.no-button-effects, .no-button-effects:active, .no-button-effects:hover, .no-button-effects:focus {
    background-image: none;
    background-color: white;
    border: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.delete-row {
    color: red;
}

.doc-table {
    margin: 0 auto;
}

.revise-edit-container {
    float: right;
}

.revise-edit-links  {
    color: #0072B9;
}

.revise-edit-links:hover, .revise-edit-links:active {
    text-decoration: none;
}

.submit-button-container {
    text-align: center;
    padding: 30px 0;
}

.searchfield {
  width: 200px;
}

.submit-button{
    background-image: none;
    background-color: #0072B9;/*#257FE6;*/
    color: white;
    border-radius: 5px;
    border: none;
    min-height: 35px;
    min-width: 100px;
    outline: none;
}

.submit-button:focus, .submit-button:hover, .submit-button:active {
    background-color: #26BB9C; /*#043962;*/
    color: white;
}

.navbar-inverse .brand, .navbar-inverse .nav > li > a, .navbar-inverse .nav > li > a{
  color: grey;
}

.navbar-inverse .brand, .navbar-inverse .nav > li > a{
  text-shadow: none;
}

.navbar-inverse .brand:hover, .navbar-inverse .nav > li > a:focus, .navbar-inverse .nav > li > a:hover, .navbar-inverse .brand:hover, .navbar-inverse .nav > li > a:hover, .navbar-inverse .brand:focus, .navbar-inverse .nav > li > a:focus{
  color: #0072B9;
}

#admin-tools i {
	font-size: 300%;
	line-height: 110%;
	min-height: 100px;
}

#admin-tools a {
	margin-bottom: 10px;
}

ul.actions li a:hover > i {
	text-decoration: none;
}
ul.actions li a > i {
	color: #000;
	margin-right: 5px;
}
ul.actions li a.btn > i {
	font-size: 200%;
}

ul.tree, ul.tree ul {
	margin-left: 20px;
}

ul.jqtree-tree li.jqtree-selected > .jqtree-element,
ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
    background-color: #fff;
    background: none;
    text-shadow: none;
		font-weight: bold;
}

.wordbreak {
	word-break: break-word;
}

.btn-file {
	position: relative;
	overflow: hidden;
}
.btn-file input[type=file] {
	position: absolute;
	top: 0;
	right: 0;
	min-width: 100%;
	min-height: 100%;
	font-size: 999px;
	text-align: right;
	filter: alpha(opacity=0);
	opacity: 0;
	background: red;
	cursor: inherit;
	display: block;
}
input[readonly] {
	background-color: white !important;
	cursor: text !important;
}

div.mandatories {
	font-size: 90%;
	font-style: italic;
	color: #888;
}
div.mandatories span {
	font-weight: bold;
}

div.statusbar {
	font-size: 80%;
}
div.statusbar div.filename {
	display: inline-block;
}
div.statusbar div.filesize {
	display: inline-block;
	float: right;
}
div.statusbar div.progress {
	margin-bottom: 10px;
}
div.statusbar a.btn {
	margin-bottom: 10px;
}

.chosen-container-multi .chosen-choices {
	border: 1px solid #cccccc;
	border-radius: 4px;
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
	transition: border linear 0.2s, box-shadow linear 0.2s;
	padding: 2px 6px;
	height: 20px;
}

div.help h1 {
	font-size: 24px;
}

div.help h2 {
	font-size: 18px;
}

div.help h3 {
	font-size: 16px;
}

#dropfolderChooser {
	width: 60%;
	left: 20%;
	margin-left: auto;
	margin-right: auto;
}

#timeline {
	font-size: 12px;
	line-height: 14px;
}
div.timeline-event-content {
	margin: 3px 5px;
}
div.timeline-frame {
	border-radius: 4px;
	border-color: #e3e3e3;
}

div.status_change_2 {
	background-color: #DAF6D5;
	border-color: #AAF897;
}

div.status_change_-1 {
	background-color: #F6D5D5;
	border-color: #F89797;
}

div.timeline-event-selected {
	background-color: #fff785;
	border-color: #ffc200;
	z-index: 999;
}

div.splash {
	display: none;
}

@media (max-width: 480px) { 
    .nav-tabs > li {
        float:none;
    }
    .nav-tabs > li > a {
        margin-right: 0;
    }

    .nav-tabs {
        border-bottom: 0;
    }

    .nav-tabs > li > a {
        border: 1px solid #ddd;
        -webkit-border-radius: 0;
            -moz-border-radius: 0;
                border-radius: 0;
    }

    .nav-tabs > li:first-child > a {
  -webkit-border-top-right-radius: 4px;
          border-top-right-radius: 4px;
  -webkit-border-top-left-radius: 4px;
          border-top-left-radius: 4px;
  -moz-border-radius-topright: 4px;
  -moz-border-radius-topleft: 4px;
    }

    .nav-tabs > li:last-child > a {
  -webkit-border-bottom-right-radius: 4px;
          border-bottom-right-radius: 4px;
  -webkit-border-bottom-left-radius: 4px;
          border-bottom-left-radius: 4px;
  -moz-border-radius-bottomright: 4px;
  -moz-border-radius-bottomleft: 4px;
    }

    .nav-tabs > li > a:hover {
  z-index: 2;
  border-color: #ddd;
    }
}

